--- a/css/styles.css
+++ b/css/styles.css
@@ -182,6 +182,17 @@ input{
     background: hsl(173, 61%, 77%);
 }
 
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
 
 @media screen and (min-width: 500px) {
     .tips-container{
